Add smoke test task